# gl_auto_bc

./: README.md
hw_0/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
hw_0/src/headers/: input_process.hpp  quadratic.hpp
hw_0/src/sources/: input_process.cpp  main.cpp  quadratic.cpp
inc/: application.h  time_pocess.h
intro/: Makefile
intro/inc/: application.h
intro/src/: application.c  main.c
src/: application.c  main.c  time_pocess.c
